Added search bar on index page. Readme is mostly done.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dnqfg86zq/image/upload/e_background_removal/f_png/v1713318153/jeiaqodye22cq2bcqja1.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fiber Creations</title>
   </head>
